--- a/css/info.css
+++ b/css/info.css
@@ -6,6 +6,7 @@ html {
 
 #info_space {
   margin-top: 30px;
+  height: 150%;
 }
 
 .accordion {
